erro nas funcoes de perda

--- a/competicao.ipynb
+++ b/competicao.ipynb
@@ -143,7 +143,8 @@
     "### Notas\n",
     "\n",
     "* Maiores problemas no autoencoder e em seu funcionamento. A dimensao latente de 16 nao gera nada aparentemente. \n",
-    "* Talvez alterar o intervalo numero dos canais de cor ajude neste caso. O intervalo entre zero e 1 fazer 1/loss -1\n",
+    "* Talvez alterar o intervalo numero dos canais de cor ajude neste caso. O intervalo entre zero e 1 fazer 1/loss -1.\n",
+    "    * As funcoes de perda caso seja colocadas entre o intervalo de 0 a 1 ainda se comportam gerando valores negativos. Talvez esta seja uma caracteristica desse tip de funcao e do tipo de dado que esta sendo passado. Talvez passando os dados entre -1 e 1 isso possa ser ajustado. Essa transformacao serveria apenas para as funcoes relacioandas a cor que parecem sofrer mais com este problema.\n",
     "* Terei de retreinar para passar os resultados\n",
     "* Para selecionar as melhores loss function devemos utilizar outro metodo. Nao sera possivel utilizar as metricas devido a grande quantidade de funcoes que nao gera imagem como a MSE e a SSIM. Essas funcoes tem de ser investigadas. \n",
     "* Como o tempo esta curso talvez seja melhor selecionar visualmente as melhores funcoes e agrupar de acordo com as necessidades do script.\n",
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -161,11 +162,11 @@
      "text": [
       "5 loss functions to train with\n",
       "\n",
-      "    HistogramColorLoss, result(6022.24755859375)\n",
-      "    angular_color_loss, result(0.9995093941688538)\n",
-      "    DarkChannelLoss, result(261.767578125)\n",
-      "    LCHChannelLoss, result(nan)\n",
-      "    HSVChannelLoss, result(8594029568.0)\n"
+      "    HistogramColorLoss, result: -2.001150131225586     type<class 'torch.Tensor'>)\n",
+      "    angular_color_loss, result: 0.9973129034042358     type<class 'torch.Tensor'>)\n",
+      "    DarkChannelLoss, result: -2.004344940185547     type<class 'torch.Tensor'>)\n",
+      "    LCHChannelLoss, result: nan     type<class 'torch.Tensor'>)\n",
+      "    HSVChannelLoss, result: -1.0     type<class 'torch.Tensor'>)\n"
      ]
     }
    ],
@@ -185,10 +186,11 @@
     "\n",
     "print(f\"{len(loss_battle)} loss functions to train with\\n\")\n",
     "#print(f\"{len(modelos)} models to train with\")\n",
+    "\n",
     "x = torch.randn(1, 3, 256, 256).to(device)\n",
     "y = torch.randn(1, 3, 256, 256).to(device)\n",
     "for loss_fn in loss_battle:\n",
-    "    print(f\"    {loss_fn.name}, result({loss_fn(x, y)})\")"
+    "    print(f\"    {loss_fn.name}, result: {loss_fn(x, y)}     type{type(loss_fn(x, x))})\")"
    ]
   },
   {
