--- a/competicao.ipynb
+++ b/competicao.ipynb
@@ -147,6 +147,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-2.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def normalize_loss_output(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        result = func(*args, **kwargs)\n",
+    "        \n",
+    "        result  = (1/result)\n",
+    "\n",
+    "        # Lidar com valores infinitos no tensor\n",
+    "        result = torch.where(torch.isinf(result), torch.tensor(1.0), result)\n",
+    "        result = torch.where(result == -float('inf'), torch.tensor(0.0), result)\n",
+    "        \n",
+    "        \n",
+    "        # # Obter o valor mínimo e máximo do tensor\n",
+    "        # min_val = torch.min(result)\n",
+    "        # max_val = torch.max(result)\n",
+    "        \n",
+    "        # # Normalização para o intervalo [0, 1]\n",
+    "        # if max_val > min_val:\n",
+    "        #     normalized_result = (result - min_val) / (max_val - min_val)\n",
+    "        # else:\n",
+    "        #     normalized_result = torch.zeros_like(result)\n",
+    "        \n",
+    "        # # Garantir que o tensor esteja no intervalo [0, 1]\n",
+    "        # normalized_result = torch.clamp(normalized_result, 0, 1)\n",
+    "        \n",
+    "        return result\n",
+    "    \n",
+    "    return wrapper\n",
+    "\n",
+    "@normalize_loss_output\n",
+    "def a():\n",
+    "    #return torch.Tensor([np.inf])\n",
+    "    return torch.Tensor([-1])\n",
+    "print(a())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
