erro nas funcoes de perda decorador

--- a/competicao.ipynb
+++ b/competicao.ipynb
@@ -148,14 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-2.])\n"
+      "tensor([1.0532e-07])\n",
+      "tensor([1.0532e-07])\n",
+      "tensor([-1.0000])\n",
+      "tensor([-1.0000])\n"
      ]
     }
    ],
@@ -166,10 +169,14 @@
     "        result = func(*args, **kwargs)\n",
     "        \n",
     "        result  = (1/result)\n",
+    "        print(result)\n",
     "\n",
     "        # Lidar com valores infinitos no tensor\n",
     "        result = torch.where(torch.isinf(result), torch.tensor(1.0), result)\n",
     "        result = torch.where(result == -float('inf'), torch.tensor(0.0), result)\n",
+    "        print(result)\n",
+    "        result = result -1\n",
+    "        print(result)\n",
     "        \n",
     "        \n",
     "        # # Obter o valor mínimo e máximo do tensor\n",
@@ -192,7 +199,7 @@
     "@normalize_loss_output\n",
     "def a():\n",
     "    #return torch.Tensor([np.inf])\n",
-    "    return torch.Tensor([-1])\n",
+    "    return torch.Tensor([9494949])\n",
     "print(a())"
    ]
   },
