modificacoes na investigacao da loss e do modelo

--- a/competicao.ipynb
+++ b/competicao.ipynb
@@ -101,7 +101,11 @@
     "* Terei de retreinar para passar os resultados\n",
     "* Para selecionar as melhores loss function devemos utilizar outro metodo. Nao sera possivel utilizar as metricas devido a grande quantidade de funcoes que nao gera imagem como a MSE e a SSIM. Essas funcoes tem de ser investigadas. \n",
     "* Como o tempo esta curso talvez seja melhor selecionar visualmente as melhores funcoes e agrupar de acordo com as necessidades do script.\n",
-    "* Ainda preciso revisar os excperimentos do sbr\n"
+    "* Ainda preciso revisar os excperimentos do sbr\n",
+    "\n",
+    "### 3. Entrada no Intervalo [0, 1]:\n",
+    "* Se os dados de entrada da rede estão no intervalo [0,1] e a função de perda gera valores negativos, isso não é problemático por si só. O que importa é como os gradientes resultantes influenciam os pesos.\n",
+    "* Entretanto, é importante que os valores da função de perda sejam coerentes com o intervalo de entrada para manter a estabilidade do treinamento.\n"
    ]
   },
   {
@@ -115,11 +119,11 @@
      "text": [
       "5 loss functions to train with\n",
       "\n",
-      "    HistogramColorLoss, result: -2.001150131225586     type<class 'torch.Tensor'>)\n",
-      "    angular_color_loss, result: 0.9973129034042358     type<class 'torch.Tensor'>)\n",
-      "    DarkChannelLoss, result: -2.004344940185547     type<class 'torch.Tensor'>)\n",
-      "    LCHChannelLoss, result: nan     type<class 'torch.Tensor'>)\n",
-      "    HSVChannelLoss, result: -1.0     type<class 'torch.Tensor'>)\n"
+      "    HistogramColorLoss, result: 0.9999459385871887     type<class 'torch.Tensor'>)\n",
+      "    angular_color_loss, result: 0.9997559785842896     type<class 'torch.Tensor'>)\n",
+      "    DarkChannelLoss, result: 0.9959375858306885     type<class 'torch.Tensor'>)\n",
+      "    LabChannelLoss, result: 38190.7890625     type<class 'torch.Tensor'>)\n",
+      "    HSVChannelLoss, result: 1.0     type<class 'torch.Tensor'>)\n"
      ]
     }
    ],
@@ -202,6 +206,18 @@
     "    return torch.Tensor([9494949])\n",
     "print(a())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
