novos valores de loss e testes

--- a/competicao.ipynb
+++ b/competicao.ipynb
@@ -109,21 +109,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Falta ajustar os pesos das funcoes de perda colorchannel principalmente para hsv"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 loss functions to train with\n",
+      "4 loss functions to train with\n",
       "\n",
-      "    HistogramColorLoss, result: 0.9999459385871887     type<class 'torch.Tensor'>)\n",
-      "    angular_color_loss, result: 0.9997559785842896     type<class 'torch.Tensor'>)\n",
-      "    DarkChannelLoss, result: 0.9959375858306885     type<class 'torch.Tensor'>)\n",
-      "    LabChannelLoss, result: 38190.7890625     type<class 'torch.Tensor'>)\n",
-      "    HSVChannelLoss, result: 1.0     type<class 'torch.Tensor'>)\n"
+      "    SSIMLoss, result: 0.49695873260498047     type<class 'torch.Tensor'>)\n",
+      "    PSNRLoss, result: 3.012004852294922     type<class 'torch.Tensor'>)\n",
+      "    MSELoss, result: 2.0007853507995605     type<class 'torch.Tensor'>)\n",
+      "    GradientLossOpenCV, result: 10.291131019592285     type<class 'torch.Tensor'>)\n"
      ]
     }
    ],
