train models parametros

--- a/competicao.ipynb
+++ b/competicao.ipynb
@@ -117,19 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 loss functions to train with\n",
+      "5 loss functions to train with\n",
       "\n",
-      "    SSIMLoss, result: 0.49695873260498047     type<class 'torch.Tensor'>)\n",
-      "    PSNRLoss, result: 3.012004852294922     type<class 'torch.Tensor'>)\n",
-      "    MSELoss, result: 2.0007853507995605     type<class 'torch.Tensor'>)\n",
-      "    GradientLossOpenCV, result: 10.291131019592285     type<class 'torch.Tensor'>)\n"
+      "    HistogramColorLoss, result: 0.9864577651023865     type<class 'torch.Tensor'>)\n",
+      "    angular_color_loss, result: 0.9971558451652527     type<class 'torch.Tensor'>)\n",
+      "    DarkChannelLoss, result: 0.9643101692199707     type<class 'torch.Tensor'>)\n",
+      "    LabChannelLoss, result: 0.9727352261543274     type<class 'torch.Tensor'>)\n",
+      "    HSVChannelLoss, result: 0.9911231994628906     type<class 'torch.Tensor'>)\n"
      ]
     }
    ],
