muitas modificaceos e testes

--- a/competicao.ipynb
+++ b/competicao.ipynb
@@ -117,20 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 loss functions to train with\n",
+      "4 loss functions to train with\n",
       "\n",
-      "    HistogramColorLoss, result: 0.9864577651023865     type<class 'torch.Tensor'>)\n",
-      "    angular_color_loss, result: 0.9971558451652527     type<class 'torch.Tensor'>)\n",
-      "    DarkChannelLoss, result: 0.9643101692199707     type<class 'torch.Tensor'>)\n",
-      "    LabChannelLoss, result: 0.9727352261543274     type<class 'torch.Tensor'>)\n",
-      "    HSVChannelLoss, result: 0.9911231994628906     type<class 'torch.Tensor'>)\n"
+      "    SSIMLoss, result: 0.49716806411743164     type<class 'torch.Tensor'>)\n",
+      "    PSNRLoss, result: 2.9897866249084473     type<class 'torch.Tensor'>)\n",
+      "    MSELoss, result: 1.9905755519866943     type<class 'torch.Tensor'>)\n",
+      "    GradientLossOpenCV, result: 10.314987182617188     type<class 'torch.Tensor'>)\n"
      ]
     }
    ],
@@ -145,8 +144,8 @@
     "loss_battle = []\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "#loss_battle.extend(build_perceptual_losses(rank=device))\n",
-    "loss_battle.extend(build_channel_losses(rank = device))\n",
-    "#loss_battle.extend(build_structural_losses(rank = device))\n",
+    "#loss_battle.extend(build_channel_losses(rank = device))\n",
+    "loss_battle.extend(build_structural_losses(rank = device))\n",
     "\n",
     "print(f\"{len(loss_battle)} loss functions to train with\\n\")\n",
     "#print(f\"{len(modelos)} models to train with\")\n",
