--- a/competicao.ipynb
+++ b/competicao.ipynb
@@ -445,6 +445,149 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Swim tranformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install einops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "from torch import Tensor\n",
+    "from typing import Tuple, List\n",
+    "\n",
+    "class PatchEmbedding(nn.Module):\n",
+    "    def __init__(self, in_channels: int = 3, embed_dim: int = 96, patch_size: int = 4):\n",
+    "        super().__init__()\n",
+    "        self.proj = nn.Conv2d(in_channels, embed_dim, kernel_size=patch_size, stride=patch_size)\n",
+    "        self.norm = nn.LayerNorm(embed_dim)\n",
+    "\n",
+    "    def forward(self, x: Tensor) -> Tensor:\n",
+    "        x = self.proj(x)  # [B, C, H, W] -> [B, embed_dim, H', W']\n",
+    "        x = x.flatten(2)  # [B, embed_dim, H', W'] -> [B, embed_dim, H'*W']\n",
+    "        x = x.transpose(1, 2)  # [B, embed_dim, H'*W'] -> [B, H'*W', embed_dim]\n",
+    "        x = self.norm(x)\n",
+    "        return x\n",
+    "\n",
+    "class MLP(nn.Module):\n",
+    "    def __init__(self, in_features: int, hidden_features: int = None, out_features: int = None, drop: float = 0.):\n",
+    "        super().__init__()\n",
+    "        out_features = out_features or in_features\n",
+    "        hidden_features = hidden_features or in_features\n",
+    "        self.fc1 = nn.Linear(in_features, hidden_features)\n",
+    "        self.act = nn.GELU()\n",
+    "        self.fc2 = nn.Linear(hidden_features, out_features)\n",
+    "        self.drop = nn.Dropout(drop)\n",
+    "\n",
+    "    def forward(self, x: Tensor) -> Tensor:\n",
+    "        x = self.fc1(x)\n",
+    "        x = self.act(x)\n",
+    "        x = self.drop(x)\n",
+    "        x = self.fc2(x)\n",
+    "        x = self.drop(x)\n",
+    "        return x\n",
+    "\n",
+    "class WindowAttention(nn.Module):\n",
+    "    def __init__(self, dim: int, num_heads: int):\n",
+    "        super().__init__()\n",
+    "        self.dim = dim\n",
+    "        self.num_heads = num_heads\n",
+    "        self.scale = (dim // num_heads) ** -0.5\n",
+    "\n",
+    "        self.qkv = nn.Linear(dim, dim * 3, bias=False)\n",
+    "        self.proj = nn.Linear(dim, dim)\n",
+    "        self.softmax = nn.Softmax(dim=-1)\n",
+    "\n",
+    "    def forward(self, x: Tensor, mask: Tensor = None) -> Tensor:\n",
+    "        B, N, C = x.shape\n",
+    "        qkv = self.qkv(x).reshape(B, N, 3, self.num_heads, C // self.num_heads)\n",
+    "        qkv = qkv.permute(2, 0, 3, 1, 4)  # [3, B, num_heads, N, C // num_heads]\n",
+    "        q, k, v = qkv[0], qkv[1], qkv[2]\n",
+    "\n",
+    "        attn = (q @ k.transpose(-2, -1)) * self.scale\n",
+    "        if mask is not None:\n",
+    "            attn = attn.masked_fill(mask == 0, float('-inf'))\n",
+    "        attn = self.softmax(attn)\n",
+    "\n",
+    "        x = (attn @ v).transpose(1, 2).reshape(B, N, C)\n",
+    "        x = self.proj(x)\n",
+    "        return x\n",
+    "\n",
+    "class SwinTransformerBlock(nn.Module):\n",
+    "    def __init__(self, dim: int, input_resolution: Tuple[int, int], num_heads: int, window_size: int = 7, shift_size: int = 0, mlp_ratio: float = 4., drop: float = 0.):\n",
+    "        super().__init__()\n",
+    "        self.dim = dim\n",
+    "        self.input_resolution = input_resolution\n",
+    "        self.num_heads = num_heads\n",
+    "        self.window_size = window_size\n",
+    "        self.shift_size = shift_size\n",
+    "\n",
+    "        self.norm1 = nn.LayerNorm(dim)\n",
+    "        self.attn = WindowAttention(dim, num_heads)\n",
+    "        self.drop_path = nn.Identity()\n",
+    "\n",
+    "        self.norm2 = nn.LayerNorm(dim)\n",
+    "        self.mlp = MLP(dim, int(dim * mlp_ratio), drop=drop)\n",
+    "\n",
+    "    def forward(self, x: Tensor) -> Tensor:\n",
+    "        H, W = self.input_resolution\n",
+    "        B, L, C = x.shape\n",
+    "        assert L == H * W, \"input feature has wrong size\"\n",
+    "\n",
+    "        x = x.view(B, H, W, C)\n",
+    "\n",
+    "        shortcut = x\n",
+    "        x = self.norm1(x)\n",
+    "        x = x.view(B, H, W, C)\n",
+    "\n",
+    "        # Cyclic shift\n",
+    "        if self.shift_size > 0:\n",
+    "            shifted_x = torch.roll(x, shifts=(-self.shift_size, -self.shift_size), dims=(1, 2))\n",
+    "        else:\n",
+    "            shifted_x = x\n",
+    "\n",
+    "        x_windows = self.window_partition(shifted_x)\n",
+    "        x_windows = x_windows.view(-1, self.window_size * self.window_size, C)\n",
+    "\n",
+    "        attn_windows = self.attn(x_windows)\n",
+    "        attn_windows = attn_windows.view(-1, self.window_size, self.window_size, C)\n",
+    "        shifted_x = self.window_reverse(attn_windows, H, W)\n",
+    "\n",
+    "        if self.shift_size > 0:\n",
+    "            x = torch.roll(shifted_x, shifts=(self.shift_size, self.shift_size), dims=(1, 2))\n",
+    "        else:\n",
+    "            x = shifted_x\n",
+    "\n",
+    "        x = x.view(B, H * W, C)\n",
+    "\n",
+    "        x = shortcut + self.drop_path(x)\n",
+    "\n",
+    "        x = x + self.drop_path(self.mlp(self.norm2(x)))\n",
+    "\n",
+    "        return x\n",
+    "\n",
+    "    def window_partition(self, x: Tensor) -> Tensor:\n",
+    "        B, H, W, C = x.shape\n",
+    "        x = x.view(B, H // self.window\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Rodar no cluster"
    ]
   },
