modificacoes nas funcoes de treino para salvar os dados dos checkpoints nas pastas

--- a/testes.ipynb
+++ b/testes.ipynb
@@ -1897,13 +1897,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train raw: 712 Train ref: 712 \n",
+      "Test raw: 178 Test ref: 178\n",
+      "\n",
+      "Testando o modelo Vit\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.utils import test_one_model\n",
+    "test_one_model(model_name='Vit', dataset_name=\"UIEB\", dataset_path=\"data\", ckpt_path=\"output/ckpt_battle/Vit_UIEB_Gradiente_ckpt.pth\",save=False, plot=True, metrics=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from src.utils import test_one_model\n",
-    "test_one_model(model_name='VAE', dataset_name=\"UIEB\", dataset_path=\"data\", ckpt_path=\"output/ckpt_battle/VAE_UIEB_final_ckpt.pth\",save=False, plot=True, metrics=False)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
